# Robin_-Scalping

./: .env.example  .gitignore  LICENSE  README.md  requirements.txt
config/: config.json
robin-client/: README.md  README_EN.md  index.html  package.json
robin-client/src/: App.tsx
robin-client/src-tauri/: Cargo.toml  tauri.conf.json
robin-client/src-tauri/src/: main.rs
robin-client/src/components/: Chart.tsx  ConfigPanel.tsx  ControlPanel.tsx  Dashboard.tsx  LogPanel.tsx  PositionPanel.tsx
robin-client/src/core/: aggregator.ts  binance-broker.ts  binance-feed.ts  broker-base.ts  bus.ts  config.ts  engine.ts  index.ts  indicators.ts  logger.ts  paper-broker.ts  state.ts  types.ts
robin-client/src/hooks/: index.ts  useStore.ts
robin-client/src/styles/: global.css
robin_scalper/: __init__.py  app.py  main.py
robin_scalper/core/: __init__.py  aggregator.py  bus.py  config.py  config_store.py  indicators.py  logger.py  state.py
robin_scalper/exchange/: __init__.py  base.py  binance_broker.py  binance_ws.py  paper_broker.py
robin_scalper/strategy/: __init__.py  engine.py
robin_scalper/web/: __init__.py  server.py
robin_scalper/web/static/: app.js  style.css
robin_scalper/web/templates/: dashboard.html  login.html  test.html
